Increase padding on h1 header at 350px and down to correct overlap with hamburger bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -792,7 +792,7 @@ footer i:hover {
 
     /* header */
     header h1 {
-        padding: 0rem 2rem;
+        padding: 0rem 4rem;
     }
 
     /* sign up page */
